tests/snapshots/scripts_sanitized/fmSyntaxColorizer/Example SyntaxColorizing - ID 46/New functionality reference - ID 197/Functions - ID 183/fm14 functions - ID 167.txt.snap
---
source: src/main.rs
expression: output_content
---
# Design function - FieldStyle
Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️

# TODO
